--- a/.gitignore
+++ b/.gitignore
@@ -26,8 +26,8 @@ venv.bak/
 ehthumbs.db
 Thumbs.db
 
-# Streamlit
-.streamlit/
+# Streamlit (allow config, ignore secrets)
+.streamlit/secrets.toml
 
 # Environment variables
 .env
