--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 streamlit>=1.49.0
 pandas>=2.0.0
-numpy==1.23.5
-scikit-learn==1.2.2
-scipy==1.10.1
+numpy>=1.24.0
+scikit-learn>=1.3.0
+scipy>=1.10.0
 openai>=1.30.0
